[gd_scene load_steps=2 format=2]

[ext_resource path="res://FishSpawner.gd" type="Script" id=1]

[node name="FishSpawner" type="Spatial"]
script = ExtResource( 1 )
number_fishes = 5
timer = 2

[node name="Point1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.9851, 0, -23.9464 )

[node name="Point2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.3327, 0, 19.2023 )

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
